# Instant-DNA

./: BUSINESS_SUMMARY.md  Cargo.toml  DIY_DNA_GUIDE.md  DIY_RESULTS.md  LICENSE  README.md  benchmark_results.txt  converted_dna.vcf  diy_test.vcf  diy_test_input.txt  download_1000genomes.sh  install_competitors.sh  sample_23andme.txt
benchmark_data/: benchmark_sequence.fasta
src/: alignment.rs  assembly.rs  benchmark.rs  binary_optimizer.rs  diy_dna.rs  dna_engine.rs  genetic_analyzer.rs  main.rs  raw_converter.rs  rna_processor.rs  sequencer.rs  variant_caller.rs  vcf_processor.rs
