[package]
name = "instant_dna"
version = "2.0.0"
edition = "2021"
authors = ["Richie Looney <richie@looney-algorithm.com>"]
description = "Professional-grade DNA/RNA analysis system with binary optimizations - Compatible with 1000 Genomes, dbSNP, and other genomic databases"
license = "Proprietary"
keywords = ["dna", "rna", "genomics", "vcf", "bioinformatics"]
categories = ["science", "algorithms", "command-line-utilities"]

[dependencies]
# Core performance
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.16"

# SIMD and binary optimizations
wide = "0.7"
bytemuck = "1.14"
memmap2 = "0.9"

# Mathematics and algorithms
rug = "1.24"
nalgebra = "0.32"
ndarray = "0.15"

# Command line interface
clap = { version = "4.0", features = ["derive", "color"] }

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
bincode = "1.3"

# Text processing and regex
regex = "1.10"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# File I/O and formats
bio = "1.6"
flate2 = "1.0"
rust-htslib = "0.44"  # For VCF/BCF file processing

# Time and logging
log = "0.4"
env_logger = "0.10"

# Networking and async
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Utilities
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Genetic analysis specific
petgraph = "0.6"
ahash = "0.8"
fastrand = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "instant-dna"
path = "src/main.rs"
